--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,41 @@
-.App {
-  text-align: center;
+.board{
+  margin-top: 3%;
+  margin-left: 30%;
+  margin-right: 30%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.display{
+  border: 1px solid grey;
+  height: 100px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.button-panel{
+  width: 400px;
+  height: 600px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.row{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 100%;
+}
+
+.button{
+  display: flex;
+  height: 5em;
+  flex: 1;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-size: 1.4em;
+  background-color: #e0e1e6;
+  color:#888;
+  outline: 1px solid #888;
 }
 
-.App-link {
-  color: #61dafb;
+.btn{
+  border-radius: 0 !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+.operator{
+  background: orange !important;
+  color: white !important;
 }
