--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,7 @@
 .App {
-  margin-top: 50px;
 }
 
 .display {
-  display: flex;
-  height: 4em;
-  width: 385px;
-  flex: 1;
-  background: grey;
-  outline: 1px solid #888;
-  color: white;
-  justify-content: flex-end;
-  padding: 0.5em;
-  font-size: 1.4em;
-  font-weight: bold;
-  align-items: center;
-  border: none;
 }
 
 .button-panel {
@@ -24,27 +10,12 @@
 }
 
 .row {
-  display: flex;
-  width: 100%;
 }
 
 .button {
-  display: flex;
-  height: 5em;
-  flex: 1;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.4em;
-  background-color: #e0e1e6;
-  color: #888;
-  outline: 1px solid #888;
-}
-
-.btn {
-  border-radius: 0 !important;
 }
 
 .operator {
-  background: orange !important;
-  color: white !important;
+  background: orange;
+  color: white;
 }
