--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,35 @@
 .App {
+  display: flex;
+  flex-direction: column;
+  width: 700px;
 }
 
 .display {
+  color: white;
+  background-color: #848693;
+  display: flex;
+  font-size: 20px;
+  font-weight: bold;
+  height: 100px;
+  width: 100%;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding: 20px;
 }
 
 .button-panel {
-  width: 400px;
-  height: 600px;
+  display: flex;
+  flex-direction: column;
 }
 
 .row {
+  height: 100px;
 }
 
 .button {
-}
-
-.operator {
-  background: orange;
-  color: white;
+  height: 100%;
+  color: #000;
+  border: 1px solid #c4c4c4;
+  background-color: orange;
+  font-weight: bold;
 }
