--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 700px;
+  margin: 0 auto;
 }
 
 .display {
@@ -14,7 +15,8 @@
   width: 100%;
   justify-content: flex-end;
   align-items: flex-end;
-  padding: 20px;
+  padding: 0 20px;
+  border: none;
 }
 
 .button-panel {
